--- a/design.ui
+++ b/design.ui
@@ -148,7 +148,7 @@
               <property name="sizeHint" stdset="0">
                <size>
                 <width>20</width>
-                <height>66</height>
+                <height>60</height>
                </size>
               </property>
              </spacer>
@@ -220,10 +220,11 @@
         </property>
         <property name="font">
          <font>
+          <family>Lucida Sans Unicode</family>
           <pointsize>5</pointsize>
-          <weight>75</weight>
-          <italic>true</italic>
-          <bold>true</bold>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
          </font>
         </property>
         <property name="text">
@@ -256,7 +257,7 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>360</width>
+          <width>400</width>
           <height>0</height>
          </size>
         </property>
