--- a/design.ui
+++ b/design.ui
@@ -11,11 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>GPIB Tester Simulator</string>
+   <string>GPIB Command Sequencer</string>
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>icons/gpibtester.svg</normaloff>icons/gpibtester.svg</iconset>
+    <normaloff>icons/gpibcs.svg</normaloff>icons/gpibcs.svg</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
