--- a/design.ui
+++ b/design.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>icons/gpibcs.svg</normaloff>icons/gpibcs.svg</iconset>
+    <normaloff>icons/gpibcs.ico</normaloff>icons/gpibcs.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
@@ -137,7 +137,7 @@
             <item>
              <widget class="QPushButton" name="queryResponseButton">
               <property name="text">
-               <string>ibwrt |ibrsp</string>
+               <string>ibwrt | ibrsp</string>
               </property>
              </widget>
             </item>
