--- a/buildinstaller.wxs
+++ b/buildinstaller.wxs
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<?define ProductVersion = "0.1.0"?>
+<?define ProductVersion = "0.2.0"?>
 <?define ProductUpgradeCode = "12345678-1234-1234-1234-111111111111"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
    <Product Id="*" UpgradeCode="$(var.ProductUpgradeCode)" 
@@ -13,7 +13,7 @@
       <Property Id="ARPNOMODIFY" Value="1"/>
       <Upgrade Id="$(var.ProductUpgradeCode)">
          <UpgradeVersion Minimum="$(var.ProductVersion)" OnlyDetect="yes" Property="NEWERVERSIONDETECTED"/>
-         <UpgradeVersion Minimum="0.0.0" Maximum="$(var.ProductVersion)" IncludeMinimum="yes" IncludeMaximum="no" 
+         <UpgradeVersion Minimum="0.0.0" Maximum="$(var.ProductVersion)" IncludeMinimum="yes" IncludeMaximum="yes" 
                          Property="OLDERVERSIONBEINGUPGRADED"/>	  
       </Upgrade>
       <Condition Message="A newer version of this software is already installed.">NOT NEWERVERSIONDETECTED</Condition>
