--- a/design.ui
+++ b/design.ui
@@ -10,6 +10,12 @@
     <height>620</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>572</width>
+    <height>0</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>GPIB Command Sequencer</string>
   </property>
@@ -161,9 +167,9 @@
              <widget class="QLabel" name="versionLabel">
               <property name="font">
                <font>
-                <pointsize>9</pointsize>
+                <pointsize>8</pointsize>
                 <weight>75</weight>
-                <italic>true</italic>
+                <italic>false</italic>
                 <bold>true</bold>
                </font>
               </property>
@@ -379,7 +385,7 @@
               <bool>false</bool>
              </attribute>
              <attribute name="horizontalHeaderStretchLastSection">
-              <bool>true</bool>
+              <bool>false</bool>
              </attribute>
              <attribute name="verticalHeaderVisible">
               <bool>true</bool>
