--- a/ui/bug-report.ui
+++ b/ui/bug-report.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Bug report</string>
+   <string>gpibcs | bug report</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
