--- a/ui/main-window.ui
+++ b/ui/main-window.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>GPIB Command Sequencer</string>
+   <string>gpibcs | GPIB Command Sequencer</string>
   </property>
   <property name="windowIcon">
    <iconset>
