--- a/buildinstaller.wxs
+++ b/buildinstaller.wxs
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<?define ProductVersion = "0.2.2"?>
+<?define ProductVersion = "0.2.3"?>
 <?define ProductUpgradeCode = "12345678-1234-1234-1234-111111111111"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
    <Product Id="*" UpgradeCode="$(var.ProductUpgradeCode)" 
@@ -32,12 +32,20 @@
                       <File Id="ApplicationIcon4" Source="icons\gtk-media-play-ltr.svg"/>
                       <File Id="ApplicationIcon5" Source="icons\gtk-media-stop.svg"/>
                       <File Id="ApplicationIcon6" Source="icons\gpibcs.ico"/>
+					  <File Id="ApplicationIcon7" Source="icons\bug.png"/>
+					  <File Id="ApplicationIcon8" Source="icons\info.svg"/>
                    </Component>
                 </Directory>
                 <Directory Id="SequencesFolder" Name="sequence">
                   <Component Id="SequenceFiles" Guid="12345678-1234-1234-1234-222222222223">
                       <File Id="Sequence1" Source="sequence\bin1_pass.csv"/>
                       <File Id="Sequence2" Source="sequence\bin7_fail.csv"/>
+                   </Component>
+                </Directory>
+				<Directory Id="DocumentationFolder" Name="doc">
+                  <Component Id="DocumentationFiles" Guid="12345678-1234-1234-1234-222222222224">
+                      <File Id="Doc1" Source="doc\user-manual.html"/>
+                      <File Id="Doc2" Source="doc\user-manual.md"/>
                    </Component>
                 </Directory>
             </Directory>
@@ -64,6 +72,7 @@
          <ComponentRef Id="ApplicationFiles"/>
          <ComponentRef Id="ComponentFiles"/>
          <ComponentRef Id="SequenceFiles"/>
+		 <ComponentRef Id="DocumentationFiles"/>
          <ComponentRef Id="ApplicationShortcuts"/>		 
       </Feature>
    </Product>
