--- a/ui/main-window.ui
+++ b/ui/main-window.ui
@@ -254,7 +254,7 @@ Q</string>
                   <normaloff>icons/info.svg</normaloff>icons/info.svg</iconset>
                 </property>
                 <property name="checkable">
-                 <bool>true</bool>
+                 <bool>false</bool>
                 </property>
                </widget>
               </item>
